# src/server/handlers/api/v1/me/mod.rs
@@ -1,0 +1,12 @@
+use axum::routing::get;
+
+use crate::server::AppState;
+
+pub mod get;
+pub mod scopes;
+
+pub fn router() -> axum::Router<AppState> {
+    axum::Router::new()
+        .route("/", get(get::get_me))
+        .route("/scopes", get(scopes::get_me_scopes))
+}
