# src/server/handlers/api/v1/mod.rs
@@ -1,5 +1,3 @@
-use axum::routing::get;
-
 use crate::server::AppState;
 
 pub mod me;
@@ -7,6 +5,6 @@ pub mod notes;
 
 pub fn router() -> axum::Router<AppState> {
     axum::Router::new()
-        .route("/me", get(me::get_me))
+        .nest("/me", me::router())
         .nest("/notes", notes::router())
 }
